2012-05-21 Santiago Munín  <burning1@gmail.com>

	* EventList.java, PopupValidationEvent.java: Removed references to Core as an object.
	
2012-05-19 Santiago Munín <burning1@gmail.com>

	* AlarmReceiver.java: Removed. Now it's the service which will retrieve data.
	* Core.java: The method of setting periodically data retrieval was changed. 
				 Now, the AlarmManager will launch the Service instead of BroadcastReceiver.
	* PandroidEventviewerService.java: Every time it receives a call from the AlarmManager, will search for new events.
	* Most of files have little changes to adapt the new data retrieval subsystem.
	
2012-05-17 Santiago Munín  <burning1@gmail.com>
	
	* Core.java: Changed methods to static. 
	
	* Main.java,
	  PandroidEventviewerService.java,
	  Core.java, Options.java,
	  EventList.java
	  PandroidEventviewerActivity.java: Instances of "Core" removed.


2012-05-12 Santiago Munín  <burning1@gmail.com>

	* Licenses and javadoc comments added to all files, refactorized code.
       
    * Main.java: fixed a bug which was making the app crash when "Reset" button was clicked.
    
    * res/drawable-ldpi/help.png,
      res/drawable-ldpi/cross.png,
      res/drawable-ldpi/ok.png,
      res/values/styles.xml: Added in order to build the new notification options' UI.

2012-05-08  Santiago Munín  <burning1@gmail.com>
	
	* Options.java: Fixed a null pointer bug which was making the
	app crash when accessing the options.
	
	* Main.java: Fixed a null pointer bug which crash at the beginning
	of the app.

2012-12-27  Miguel de Dios  <miguel.dedios@artica.es>
	
	* AndroidManifest.xml,
	src/pandroid_event_viewer/pandorafms/PopupValidationEvent.java,
	src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java,
	src/pandroid_event_viewer/pandorafms/Main.java,
	src/pandroid_event_viewer/pandorafms/About.java,
	src/pandroid_event_viewer/pandorafms/Options.java,
	src/pandroid_event_viewer/pandorafms/Info.java,