@@ -51,7 +51,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
-            <TableRow android:visibility="gone" >
+            <TableRow>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -64,7 +64,7 @@
                     android:id="@+id/group_combo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:visibility="gone" />
+                     />
 
                 <ProgressBar
                     android:id="@+id/loading_group"
